--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
@@ -70,7 +70,7 @@
                 new { Title = "LabTests", Icon = "fa-user-doctor", Description = "Manage patients Lab Tests", Controller = "LabTests", Color = "success" },
                 new { Title = "MedicalRecord", Icon = "fa-user-doctor", Description = "Manage patients Medical Records", Controller = "MedicalRecord", Color = "success" },
                 new { Title = "Prescriptions", Icon = "fa-file-medical", Description = "Manage patients Prescriptions", Controller = "Prescription", Color = "success" },
-                new { Title = "Prescriptions", Icon = "fa-solid fa-pills", Description = "Manage Drug Section", Controller = "Medicine", Color = "success" }
+                new { Title = "Drugs", Icon = "fa-solid fa-pills", Description = "Manage Drug Section", Controller = "Medicine", Color = "success" }
 
                 })
                 {
