Linux base Established

--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Admin/Index.cshtml
@@ -37,7 +37,7 @@
                     <li class="nav-item hover-glow">
                         <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "Staff" ? "active" : "")"
                            href="@Url.Action("Index", "Staff")">
-                            <i class="fa-solid fa-hospital-user"></i></i> Stuff
+                            <i class="fa-solid fa-hospital-user"></i> Stuff
                             <div class="active-pulse"></div>
                         </a>
                     </li>
